# information-theory

./: .gitignore  README.md
izvorista/: Makefile  i1.c  i2.c  i2.txt  i3.c  i4.c  i4.txt
src/: CMakeLists.txt  graph.c  graph.h  huffman_coder.c  huffman_decoder.c  list.c  list.h  lzw_coder.c  lzw_decoder.c  message.txt  reader.c  reader.h  trie.c  trie.h  types.h
zad1/: distribution.py
